optimize the test script