@@ -45,33 +45,24 @@ APP_OPT="$APP_OPT -Dshell.zk-connect=zookeeper-1:2181 -Dshell.hadoop-master=hado
 MAIN_CLASS="com.neverwinterdp.dataflow.logsample.LogSampleClient"
 
 PROFILE=$(get_opt --profile 'unknown' $@)
-MESSAGE_SIZE=$(get_opt --message-size '512' $@)
+MESSAGE_SIZE=$(get_opt --message-size '128' $@)
+NUM_OF_MESSAGE=$(get_opt --num-of-message '100000' $@)
 
-if [ "$PROFILE" = "test" ] ; then
+if [ "$PROFILE" = "performance" ] ; then
+  MAX_RUN_TIME=300000 + ($NUM_OF_MESSAGE * 2)
   $JAVACMD -Djava.ext.dirs=$APP_DIR/libs:$SCRIBENGIN_HOME/libs:$JAVA_HOME/jre/lib/ext $JAVA_OPTS $APP_OPT $LOG_OPT $MAIN_CLASS \
     --registry-connect zookeeper-1:2181 \
     --registry-db-domain /NeverwinterDP \
     --registry-implementation com.neverwinterdp.registry.zk.RegistryImpl \
     --upload-app $APP_DIR --dfs-app-home /applications/dataflow/log-sample \
     --log-generator-num-of-vm 1 --log-generator-num-of-executor-per-vm 4 --log-generator-wait-for-ready 30000 \
-    --log-generator-num-of-message-per-executor 100000 --log-generator-message-size $MESSAGE_SIZE \
+    --log-generator-num-of-message-per-executor $NUM_OF_MESSAGE --log-generator-message-size $MESSAGE_SIZE \
     --log-validator-wait-for-termination 600000 --log-validator-validate-kafka log4j.aggregate \
     --dataflow-descriptor $APP_DIR/conf/kafka-log-dataflow-chain.json  \
-    --dataflow-wait-for-submit-timeout 150000 --dataflow-wait-for-termination-timeout 600000 \
-    --dataflow-task-debug
-elif [ "$PROFILE" = "performance" ] ; then
-  $JAVACMD -Djava.ext.dirs=$APP_DIR/libs:$SCRIBENGIN_HOME/libs:$JAVA_HOME/jre/lib/ext $JAVA_OPTS $APP_OPT $LOG_OPT $MAIN_CLASS \
-    --registry-connect zookeeper-1:2181 \
-    --registry-db-domain /NeverwinterDP \
-    --registry-implementation com.neverwinterdp.registry.zk.RegistryImpl \
-    --upload-app $APP_DIR --dfs-app-home /applications/dataflow/log-sample \
-    --log-generator-num-of-vm 1 --log-generator-num-of-executor-per-vm 4 --log-generator-wait-for-ready 30000 \
-    --log-generator-num-of-message-per-executor 2500000 --log-generator-message-size $MESSAGE_SIZE \
-    --log-validator-wait-for-termination 600000 --log-validator-validate-kafka log4j.aggregate \
-    --dataflow-descriptor $APP_DIR/conf/kafka-log-dataflow-chain.json  \
-    --dataflow-wait-for-submit-timeout 150000 --dataflow-wait-for-termination-timeout 5400000 \
+    --dataflow-wait-for-submit-timeout 150000 --dataflow-wait-for-termination-timeout $MAX_RUN_TIME \
     --dataflow-task-debug
 elif [ "$PROFILE" = "dataflow-worker-failure" ] ; then
+  MAX_RUN_TIME=300000 + ($NUM_OF_MESSAGE * 4)
   $JAVACMD -Djava.ext.dirs=$APP_DIR/libs:$SCRIBENGIN_HOME/libs:$JAVA_HOME/jre/lib/ext $JAVA_OPTS $APP_OPT $LOG_OPT $MAIN_CLASS \
     --registry-connect zookeeper-1:2181 \
     --registry-db-domain /NeverwinterDP \
@@ -81,7 +72,7 @@ elif [ "$PROFILE" = "dataflow-worker-failure" ] ; then
     --log-generator-num-of-message-per-executor 500000 --log-generator-message-size $MESSAGE_SIZE \
     --log-validator-wait-for-termination 600000 --log-validator-validate-kafka log4j.aggregate \
     --dataflow-descriptor $APP_DIR/conf/kafka-log-dataflow-chain.json  \
-    --dataflow-wait-for-submit-timeout 150000 --dataflow-wait-for-termination-timeout 2400000 \
+    --dataflow-wait-for-submit-timeout 150000 --dataflow-wait-for-termination-timeout $MAX_RUN_TIME \
     --dataflow-failure-simulation-worker  \
     --dataflow-failure-simulation-wait-before-start 210000 \
     --dataflow-failure-simulation-max-kill 5 \
@@ -89,7 +80,7 @@ elif [ "$PROFILE" = "dataflow-worker-failure" ] ; then
     --dataflow-task-debug
 else
   echo "Usage: "
-  echo "  run-kafka.sh --profile=[test, performance, dataflow-worker-failure] --message-size=[128, 256, 512....]"
+  echo "  run-kafka.sh --profile=[performance, dataflow-worker-failure] --message-size=[128, 256, 512....]"
 fi
 
 
